--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Open+Sans:wght@400;700;800&family=Sacramento&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/protfolio.css">
+    <script src="https://kit.fontawesome.com/7fdcff034b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -32,8 +33,8 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-despt">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact Me</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact Me</button>
             </div>
             <img src="images/hardy.png" alt="Profile_pic" class="profile-pic">
         </div>
@@ -144,7 +145,7 @@
                 </div>
             </div> 
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
 
